Switch out old ember-popovers for new tippy based with-overlay modifier

--- a/ui/packages/consul-ui/package.json
+++ b/ui/packages/consul-ui/package.json
@@ -125,12 +125,12 @@
     "ember-resolver": "^8.0.0",
     "ember-route-action-helper": "^2.0.8",
     "ember-router-helpers": "^0.4.0",
+    "ember-set-helper": "^2.0.0",
     "ember-sinon-qunit": "5.0.0",
     "ember-source": "~3.20.5",
     "ember-stargate": "^0.2.0",
     "ember-string-fns": "^1.4.0",
     "ember-test-selectors": "^4.0.0",
-    "ember-tooltips": "^3.4.3",
     "ember-truth-helpers": "^2.0.0",
     "eslint": "^7.12.1",
     "eslint-plugin-ember": "^7.7.2",
